--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "typed.js": "^2.1.0"
